<resources>
    <string name="app_name">Musican</string>

    <string name="Titulo">MUSICAN</string>

    <string name="tuto">Tutorial</string>
    <string name="scan">Scannear</string>
    <string name="ejr">Ejercicios</string>

    <string name="ejr1">Ingresa la nota</string>
    <string name="ejr2">Cual es la nota</string>

    <string name="scan1">Introdusca la etiqueta</string>

    <string name="texto">Bienvenido a Musican, esta es una aplicación móvil que te ayudara en el aprendizaje de la musicografía braille a través de un pack de tarjetas que contendrán las notas musicales o partituras en braille. Estas tendrán una marca en la parte superior izquierda para posicionar correctamente la orientación de la tarjeta. En el menú podrás encontrar dos opciones: Escanear y Ejercicios. En el apartado de ejercicios encontraras actividades para fortalecer tus conocimientos de las notas musicales base y en el apartado de Escáner podrás acercar las tarjetas para reproducir su contenido y leer paralelamente la nota o partitura que se encuentra en la tarjeta. Disfruta de tu experiencia en Musican.</string>
    <string name="tutoej1">En este ejercicio aparecerá una nota en la pantalla donde usted deberá ingresar el tag correspondiente de la nota para obtener un punto, el objetivo del ejercicio es conseguir la mayor puntuación posible en un minuto con un limite de tres oportunidades. Que comience la prueba</string>
    <string name="tutoej2">En este ejercicio deberá acercar un tag con la partitura de su preferencia, aparecerá una posición de la partitura usted deberá ingresar el tag correspondiente a la nota que se ubique en esta posición para obtener un punto, el objetivo del ejercicio es conseguir la mayor puntuación posible en un minuto con un limite de tres oportunidades. Que comience la prueba</string>
</resources>